copied from package org.compiere.grid.ed.VComboBox extends CComboBox